// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "wfa/measurement/internal/kingdom/certificate.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Representation of a Measurement Consumer entity.
message MeasurementConsumer {
  fixed64 external_measurement_consumer_id = 1;

  // The Certificate belonging to this MeasurementConsumer for public key
  // signature verification.
  Certificate certificate = 2;

  message Details {
    // Version the public API for serialized message definitions.
    string api_version = 1;

    // Serialized `EncryptionPublicKey` from public API.
    bytes public_key = 2;
    bytes public_key_signature = 3;
  }
  Details details = 3;
}
